--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>How To Separate Success & Life? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 minutes ago</div>
+                        <div class="date">32 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Path from Fear to Freedom</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Top Breakout Pairs Revealed: Trade Forex Like a Pro with Data-Backed Picks</h3>
                         <div class="channel">The Transparent Trader</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Only Human Beings Have This Unique Problem! | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="video-info">
                         <h3>First Day Trading my the5ers Evaluation Account (Live Documentary)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>Forex & CFD Expert Advisor Livetrading + Q&A Session (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -875,7 +875,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -886,7 +886,7 @@
                     <div class="video-info">
                         <h3>How to Start with the5ers (Full Setup Guide)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1557,7 +1557,7 @@
                     <div class="video-info">
                         <h3>Housing is getting more expensive because the rich are buying it all</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Top Breakout Pairs Revealed: Trade Forex Like a Pro with Data-Backed Picks</h3>
                             <div class="channel">The Transparent Trader</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5204,7 +5204,7 @@
                         <div class="video-info">
                             <h3>First Day Trading my the5ers Evaluation Account (Live Documentary)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5215,7 +5215,7 @@
                         <div class="video-info">
                             <h3>Forex & CFD Expert Advisor Livetrading + Q&A Session (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5395,7 +5395,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5406,7 +5406,7 @@
                         <div class="video-info">
                             <h3>How to Start with the5ers (Full Setup Guide)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5736,7 +5736,7 @@
                         <div class="video-info">
                             <h3>Housing is getting more expensive because the rich are buying it all</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>How To Separate Success & Life? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 minutes ago</div>
+                            <div class="date">32 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Path from Fear to Freedom</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Only Human Beings Have This Unique Problem! | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
