--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN WINNER STAYS ON</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -939,7 +939,7 @@
                     <div class="video-info">
                         <h3>How social media fuels useless products</h3>
                         <div class="channel">Matt D'Avella</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -8245,7 +8245,7 @@
                         <div class="video-info">
                             <h3>How social media fuels useless products</h3>
                             <div class="channel">Matt D'Avella</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN WINNER STAYS ON</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
