--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN WINNER STAYS ON</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -398,7 +398,7 @@
                     <div class="video-info">
                         <h3>Kundalini Yoga: The Most Dangerous Form of Yoga | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -695,7 +695,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Strategy Development with Edgewonk - 02.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5281,7 +5281,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Strategy Development with Edgewonk - 02.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7370,7 +7370,7 @@
                         <div class="video-info">
                             <h3>Kundalini Yoga: The Most Dangerous Form of Yoga | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN WINNER STAYS ON</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
