--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Relationship Between Psyche and Shakti</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Why 90% of traders still lose (even in 2025)</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Don’t Deny Your Shadow – A Personal Story</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>"Weight shift kills your distance!" Top Long Drive Coach Exposes the Truth</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -541,7 +541,7 @@
                     <div class="video-info">
                         <h3>Mean Reversion System That Works (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -939,7 +939,7 @@
                     <div class="video-info">
                         <h3>Forex Carry Trade Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Why 90% of traders still lose (even in 2025)</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5215,7 +5215,7 @@
                         <div class="video-info">
                             <h3>Mean Reversion System That Works (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5415,7 +5415,7 @@
                         <div class="video-info">
                             <h3>Forex Carry Trade Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Relationship Between Psyche and Shakti</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Don’t Deny Your Shadow – A Personal Story</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>"Weight shift kills your distance!" Top Long Drive Coach Exposes the Truth</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
